<resources>
    <string name="app_name">Meal Maestro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">\"16273107883-p189sjs45e1g8741ere32i2kvi4mn1u1.apps.googleusercontent.com\"</string>
    <string name="API_KEY"> AIzaSyDiTif5jgq6rpRDztxSHaX0E3dSaLchk-0 </string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="countries">Countries</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="instructions">- Instructions :</string>
    <string name="read_more">Read More …</string>
    <string name="search_meals">Search Meals …</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string-array name="filter_options">
        <item>Category</item>
        <item>Country</item>
        <item>Ingredient</item>
    </string-array>
</resources>