<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".auth.LoginFragment">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:padding="10dp"
        android:hint="@string/email"
        android:textColorHint="@color/accent"
        android:textColor="@color/accent"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_back" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:padding="10dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:hint="@string/password"
        android:textColorHint="@color/accent"
        android:textColor="@color/accent"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_back"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/login"
        android:background="@drawable/button_back"/>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/sign_up"
        android:background="@drawable/button_back"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/anonymousSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/continue_as_guest"
        android:background="@drawable/button_back"/>

</LinearLayout>